Deprecate PKGBUILD for CosmiciIndustries C05M1C
Mark PKGBUILD as deprecated for CosmiciIndustries C05M1C.

--- a/PKGBUILDS/tigervnc/PKGBUILD
+++ b/PKGBUILDS/tigervnc/PKGBUILD
@@ -1,3 +1,4 @@
+#DEPRICATED#: CosmiciIndustries C05M1C
 # Maintainer: Sergej Pupykin <pupykin.s+arch@gmail.com>
 # Maintainer: Uroš Vampl <mobile.leecher at gmail dot com>
 
