Update comment in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #==============================================================================#
-# File extensions to be ignored anywhere in the tree.
+# File extensions to be ignored anywhere in the tree. %TODO%
 #==============================================================================#
 *.o
 cache
